--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do Site</title>
+    <title>Curso em Vídeo</title>
 </head>
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do artigo 001</p>
+            <h2>Curso de HTML em CSS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam repudiandae assumenda architecto nesciunt reprehenderit sequi quidem placeat fugit. Dolorem sapiente fugit iste rem officia distinctio eaque odit nisi, minima nobis?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est unde culpa voluptatum corporis explicabo, minus mollitia libero harum reprehenderit in cumque, deserunt enim at sint! Maxime nulla reiciendis adipisci reprehenderit?</p>
         </article>
     </main>
 </body>
